--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap/scss/bootstrap';
 
 // ============================================
-// PALETTE OFFICIELLE RÉGION (CORRIGÉE)
+// PALETTE OFFICIELLE RÉGION 
 // ============================================
 $white: #f1f8fc;
 $primary-blue: #00497c;      // Bleu foncé (boutons, titres)
@@ -40,6 +40,11 @@ body {
   background: $bg-white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   padding: 1rem 0;
+
+  .nav{
+    display: flex;
+    flex-direction: row;
+  }
   
   .logo {
     max-height: 60px;
@@ -114,13 +119,14 @@ body {
   border-radius: 15px;
   padding: 1.5rem;
   background: $bg-white;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   transition: transform 0.2s, box-shadow 0.2s;
   cursor: pointer;
   height: 100%;
   
   &:hover {
     transform: translateY(-5px);
-    box-shadow: 0 4px 12px rgba(0, 116, 199, 0.2);
+    box-shadow: 0 8px 20px rgba(0, 116, 199, 0.3);
   }
   
   .artisan-name {
