--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -2,13 +2,15 @@
   .how-to-find {
     .steps {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
+      align-items: flex-start;
       flex-wrap: wrap;
       gap: 2rem;
       
       .step {
         text-align: center;
-        max-width: 200px;
+        flex: 0 0 auto;
+        width: 200px;
         
         .step-number {
           width: 50px;
