--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -1,11 +1,14 @@
 .home {
   .how-to-find {
+    margin-top: 30px;
+    margin-bottom: 20px;
     .steps {
       display: flex;
       justify-content: space-evenly;
       align-items: flex-start;
       flex-wrap: wrap;
       gap: 2rem;
+      margin-top: 20px;
       
       .step {
         text-align: center;
@@ -33,4 +36,26 @@
       }
     }
   }
+}
+.artisans-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5rem;
+  
+  @media (max-width: 991px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  
+  @media (max-width: 576px) {
+    grid-template-columns: 1fr;
+  }
+}
+h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+.top-artisans {
+  margin-bottom: 4rem;
 }
